Fix emojis overflow on Apple devices

--- a/src/scss/partials/_chat.scss
+++ b/src/scss/partials/_chat.scss
@@ -776,10 +776,10 @@
 			vertical-align: top;
 		}
 
-		span.emoji {
+		/* span.emoji {
 			font-size: 1rem;
 			vertical-align: unset;
-		}
+		} */
 	}
 
 	.pinned-message {
